--- a/style.css
+++ b/style.css
@@ -1,149 +1,227 @@
-
-:root{
---Soft_Cyan : hsl(174, 77%, 80%);
---Strong_Cyan: hsl(174, 86%, 45%);
---Light_Grayish_Red : hsl(14, 92%, 95%);
---Light_Red : hsl(15, 100%, 70%);
---Pale_Blue : hsl(226, 100%, 87%);
---White : hsl (0, 0%, 100%);
---Very_Pale_Blue : hsl(230, 100%, 99%);
---Light_Grayish_Blue : hsl(224, 65%, 95%);
---Light_Grayish_Blue : hsl(223, 50%, 87%);
---Grayish_Blue : hsl(225, 20%, 60%);
---Dark_Desaturated_Blue : hsl(227, 35%, 25%);
+:root {
+  --Soft_Cyan: hsl(174, 77%, 80%);
+  --Strong_Cyan: hsl(174, 86%, 45%);
+  --Light_Grayish_Red: hsl(14, 92%, 95%);
+  --Light_Red: hsl(15, 100%, 70%);
+  --Pale_Blue: hsl(226, 100%, 87%);
+  --White: hsl(0, 0%, 100%);
+  --Very_Pale_Blue: hsl(230, 100%, 99%);
+  --Light_Grayish_Blue: hsl(223, 50%, 87%);
+  --Grayish_Blue: hsl(225, 20%, 60%);
+  --Dark_Desaturated_Blue: hsl(227, 35%, 25%);
 }
 
 body {
-    background-color: var(--Very_Pale_Blue);
-    min-height: 100dvh;
-    width: 100%;
-    background-image: url('./images/bg-pattern.svg') ;
-    background-repeat: no-repeat;
-    background-size:contain;
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: url(images/bg-pattern.svg);
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  color: #333;
 }
 
+.pricing-container {
+  text-align: center;
+ 
+}
 
-.pricingPage{
-  width:100%;
-  padding-top:8rem;
+.heading {
+  background: url(images/pattern-circles.svg) no-repeat center;
+  justify-content: center; 
+  text-align: center; 
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.heading p{
+  margin: 0;
+}
+
+.card {
+  background: white;
+  padding: 2rem;
+  border-radius: 15px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
   margin: auto;
 }
 
-.main {
-    width: 40%;
-    margin: auto;
-    background-color: var(--White);
-    border-radius: 10px;
-    margin-top: 5rem;
-    box-shadow: 10px 10px 10px -5px,-10px -10px 10px -5px ;
+.card-inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
-.header{
-  width: 30%;
-  margin: auto;  
-  background-color: red;
+.pageviews {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #888;
+  font-size: smaller;
 }
 
+.price-block{
+font-size:large;
+display: flex;
+align-items: center;
+}
 
-.slider{
-  width: 50%;
+.price {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+input.slider {
+  width: 100%;
+  margin: 1rem 0;
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
-    appearance: none; 
-    width: 100%;
-    cursor: pointer;
-    outline: none;
-    border-radius: 15px;
-    height: 6px;
-    background: var(--Grayish_Blue);
-  }
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  border-radius: 15px;
+  height: 6px;
+  background: var(--Grayish_Blue);
+}
 
-  /* circle */
-  input[type="range"]::-webkit-slider-thumb { 
-    -webkit-appearance: none;
-    appearance: none; 
-    height: 30px;
-    width: 30px;
-    border: 0.5px solid var(--Strong_Cyan);
-    background-color: var(--Strong_Cyan);
-    background-image: url(./images/icon-slider.svg) ;
-    background-repeat: no-repeat;
-    background-size:auto;
-    background-position:center ;
-    border-radius: 50%;
-    border: none;
-    transition: .2s ease-in-out;
-  }
+/* Slider thumb */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 30px;
+  width: 30px;
+  border: none;
+  background-color: var(--Strong_Cyan);
+  background-image: url(./images/icon-slider.svg);
+  background-repeat: no-repeat;
+  background-size: 15px;
+  background-position: center;
+  border-radius: 50%;
+  transition: .2s ease-in-out;
+}
 
-  input[type="range"]:has(::-webkit-range-thumb) {
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    border: none;
-    transition: .2s ease-in-out;
-  }
+input[type="range"]::-webkit-slider-thumb:hover {
+  cursor: pointer;
+  box-shadow: 0px 2px 2px 2px var(--Soft_Cyan);
+  /* background-color: var(--Soft_Cyan); */
+}
+
+input[type="range"]::-webkit-slider-thumb:active {
+  cursor: grabbing;
+}
+
+.billing-toggle {
+  display: flex;
   
-  input[type="range"]::-webkit-slider-thumb:hover{
-    cursor:pointer;
-    box-shadow:0px 10px 25px 5px var(--Soft_Cyan) ;
-    background-color: var(--Soft_Cyan);
-    
-  }
-
-  input[type="range"]::-webkit-slider-thumb:active{
-    cursor:grabbing;
-  }
-  
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1.5rem;
+  font-size: 0.9rem;
+}
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 40px;
-  height: 21px;
-  border: 1px solid black;
-  border-radius: 3rem;
+  width: 42px;
+  height: 22px;
 }
 
 .switch input {
-  width: 0px;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
-.checkbox {
+.slider-toggle {
   position: absolute;
-  background-color: grey;
-  transition: 0.4s;
+  cursor: pointer;
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
-  border-radius: 10px;
-  cursor: pointer;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 34px;
+  transition: 0.4s;
 }
 
-.checkbox:before {
+.slider-toggle:before {
   position: absolute;
   content: "";
-  height: 18px;
-  width: 18px;
-  top: 1.5px;
-  left: 1.5px;
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
   background-color: white;
   transition: 0.4s;
-  border-radius: 10px;
+  border-radius: 50%;
 }
 
-input:checked + .checkbox {
-  background-color: #2196f3;
+input:checked + .slider-toggle {
+  background-color: #4f5fd4;
 }
 
-input:focus + .checkbox {
-  box-shadow: 0 0 1px #2196f3;
+input:checked + .slider-toggle:before {
+  transform: translateX(20px);
 }
 
-input:checked + .checkbox:before {
-  transform: translateX(18px);
+.discount {
+  background: #fee0e0;
+  color: #ff5555;
+  padding: 2px 6px;
+  border-radius: 4px;
+  font-size: 0.5rem;
 }
 
+hr{
+  color: var(--Light_Grayish_Blue);
+  font-size: small;
+box-shadow: none;
+}
 
+.feature-button{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.features {
+  list-style: none;
+  padding: 0;
+  text-align: left;
+  margin-bottom: 1.5rem;
+}
+
+.features li {
+  margin: 0.5rem 0;
+  color: var(--Grayish_Blue);
+}
+
+.features-block{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.start-btn {
+  background: #1d2b64;
+  color: white;
+  border: none;
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.start-btn:hover {
+  background: #0f1a45;
+}
