--- a/style.css
+++ b/style.css
@@ -225,3 +225,38 @@ box-shadow: none;
 .start-btn:hover {
   background: #0f1a45;
 }
+
+@media (max-width:540px) {
+  .feature-button{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.billing-toggle {
+  display: flex;
+flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1.5rem;
+  font-size: 0.9rem;
+}
+
+.card-inner{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1{
+  font-size: 1.5rem;
+}
+
+.heading p{
+  font-size: 0.8rem;
+}
+}
